--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -19,5 +19,13 @@
         <li>Lasagna noodles</li>
         <li>Cheeses</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+    </ol>
 </body>
 </html>
