Link tagliatelle recipe index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
     <a href="recipes/spaghetti.html" target="_blank">Spaghetti</a>
+    <a href="recipes/tagliatelle.html" target="_blank">Tagliatelle</a>
 </body>
 </html>
