Link css and add header and main div lasagna.html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<bodys>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
-    <a href="recipes/spaghetti.html" target="_blank">Spaghetti</a>
-    <a href="recipes/tagliatelle.html" target="_blank">Tagliatelle</a>
-</body>
+    <div class="recipes">
+        <a href="recipes/lasagna.html" target="_blank">Lasagna</a>
+        <a href="recipes/spaghetti.html" target="_blank">Spaghetti</a>
+        <a href="recipes/tagliatelle.html" target="_blank">Tagliatelle</a>
+    </div>
+        
+</bodys>
 </html>
