--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylerecipes.css">
 </head>
 <body>
-    <h1>Lasagna recipe</h1>
-    <img src="../images/Lasagna.jpeg" alt="Picture of Lasagna">
-    <h2>Description</h2>
+    <div class="header">
+        <h1>Lasagna recipe</h1>
+        <img src="../images/Lasagna.jpeg" alt="Picture of Lasagna">
+    </div>
+    <div class="main">
+        <h2>Description</h2>
     <p>The Allrecipes community adores this lasagna.</p>
     <h2>Ingredients</h2>
     <ul>
@@ -27,5 +31,6 @@
         <li>Layer the lasagna according to the recipe instructions.</li>
         <li>Cover with foil and bake.</li>
     </ol>
+    </div>
 </body>
 </html>
